Fixed scrollbar hiding on Firefox.

--- a/youtube/youtube-fullscreen-theater/youtube-fullscreen-theater.user.css
+++ b/youtube/youtube-fullscreen-theater/youtube-fullscreen-theater.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           YouTube - Fullscreen Theater
 @description    Displays YouTube's theater in fullscreen.
-@version        2023.08.18.22.23
+@version        2023.08.18.22.27
 @author         MetalTxus
 @namespace      https://github.com/jesuscc1993/
 @license        CC BY-SA 4.0
@@ -55,6 +55,10 @@
   if (hide-scrollbar) {
     ::-webkit-scrollbar {
       display: none;
+    }
+
+    * {
+      scrollbar-width: none;
     }
   }
 }
